memberlist: absolute on small height, fixed on large height

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,7 +4,7 @@
   App
 =============================== */
 .App {
-  // min-height: 100vh;
+  padding-top: 3.75rem;
 }
 
 /* ============================
