--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -18,7 +18,10 @@
 }
 
 .App__header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1;
 }
 
